# tactic-priors

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: empirical_tactics_probability_mathlib4.csv  empirical_tactics_probability_model_mathlib4.pkl  solved_indexes.json
docs/: methodology.md
minif2f_solutions/: README.md  Test.lean
notebooks/: analysis.ipynb
sketches/: llm_gating.py
src/tactic_priors/: __init__.py  build_distribution.py  ngram_models.py  search.py
tests/: conftest.py  test_artifacts.py  test_search_graph.py  test_trigram.py  test_unigram.py
